--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,7 @@
-html
-  ,body
-  ,div
-  ,p{margin:0;padding:0;}
-body{font-size:14px;font-family:"microsoft yahei";background-color:#fff;}
+html,body,div,p{margin:0;padding:0;}
+body{font-size:14px;font-family:"microsoft yahei";background-color:#f5f5f5;}
 table{border-collapse:collapse;border-spacing:0;table-layout:fixed;}
-th
-  ,td{font-size:14px;padding:0;}
+th,td{font-size:14px;padding:0;}
 a{text-decoration:none;color:#333;}
 a:hover{text-decoration:underline;}
 img{border:0 none;}
@@ -21,26 +17,20 @@ img{border:0 none;}
 .column .tb1{width:900px;line-height:28px;color:#333;word-break:break-all;padding:0 20px;}
 .column .tb2{width:430px;padding:0 20px;}
 .column .tb3{width:900px;padding:15px 20px 15px 0;}
-.column .gray
-  ,.column .gray2{color:#999;word-break:break-all;}
+.column .gray,.column .gray2{color:#999;word-break:break-all;}
 .column .gray2{color:#666;}
-.column .plate1
-  ,.column .plate2{width:430px;height:54px;font-size:16px;font-weight:bold;color:#818ba3;}
+.column .plate1,.column .plate2{width:430px;height:54px;font-size:16px;font-weight:bold;color:#818ba3;}
 .column .plate1{width:900px;padding:0 50px;}
 .column .plate1 .f16{font-size:14px;font-weight:normal;color:#333;}
 .column .plate1 .f12{font-size:12px;font-weight:normal;color:#999;}
-.column .keys
-  ,.column .keys2{width:85px;line-height:28px;color:#666;}
+.column .keys,.column .keys2{width:85px;line-height:28px;color:#666;}
 .column .keys2{width:110px;}
-.column .txt1
-  ,.column .txt2
-  ,.column .txt3{width:815px;line-height:28px;color:#333;word-break:break-all;}
+.column .txt1,.column .txt2,.column .txt3{width:815px;line-height:28px;color:#333;word-break:break-all;}
 .column .txt2{width:345px;}
 .column .txt3{width:auto;max-width:815px;font-size:14px;font-weight:normal;}
 .column .txt4{width:305px;color:#fff;word-break:break-all;}
 .column .infr{width:767px;color:#fff;table-layout:auto;}
-.column .vam
-  ,.column .grcha{vertical-align:middle;margin-left:5px;}
+.column .vam,.column .grcha{vertical-align:middle;margin-left:5px;}
 .column .box1 .vam{margin-right:5px;margin-left:0;}
 .column .name{font-size:24px;padding-bottom:18px;}
 .column .icard{color:#a1a3ae;padding-bottom:18px;}
@@ -48,8 +38,7 @@ img{border:0 none;}
 .column .pr20{width:225px;padding-right:20px;}
 .column .time{width:125px;line-height:28px;color:#666;padding-left:20px;}
 .column .rtbox{width:765px;line-height:28px;color:#333;padding:0 20px 0 15px;word-break:break-all;}
-.column .hai
-  ,.column .guan{line-height:18px;font-size:12px;color:#fff;vertical-align:text-top;margin-left:5px;padding:1px 3px;position:relative;top:2px;background-color:#00A29A;border-radius:2px;}
+.column .hai,.column .guan{line-height:18px;font-size:12px;color:#fff;vertical-align:text-top;margin-left:5px;padding:1px 3px;position:relative;top:2px;background-color:#00A29A;border-radius:2px;}
 .column .tag{display:inline-block;word-break:break-all;# display:inline;# zoom:1;}
 .column .all{color:#666;padding:10px 20px;background-color:#fafafa;}
 .column .tit{width:900px;height:40px;color:#666;padding:0 20px;background-color:#f5f5f5;}
@@ -73,3 +62,8 @@ img{border:0 none;}
 .myTxImg{width:120px;height:120px;border-radius:100%;border:2px solid #ccc;}
 .companyName{font-weight:bold;}
 .toggleTxtImg{cursor:pointer;}
+
+.skin-container {height: 200px; margin: 0 auto -85px;min-width: 1200px; overflow: hidden; position: relative; width: 100%;z-index:-9;}
+.skin-container img {height: 503px;position: relative;width: 100%;}
+
+.container{width:1050px;position: relative;min-width: 1050px;left:50%;margin-left:-525px;background:#fff;padding:25px 0px;}
